# mcp-knowledge-sharing

./: .env.example  .gitignore  README.md  config.py  db_client.py  docker-compose.yml  embeddings.py  pyproject.toml
db/: init.sql
mcp_server/: queries.py  scrape_tool.py  server.py
scraper/: categorizer.py  main.py  parser.py  tags.py
